refactor/#54 : Diary 코드 리팩토링 - columnDefinition -> length로 속성 변경 - 주석 문서화를 상세하게 변경 - DiaryRepository에서 사용하지 않은 메서드 제거 - 응답 DTO에서 from() -> toEntity()로 변경 - 일기 조회시 PUBLIC, PRIVATE의 경우에 따라서 조회할 수 있도록 로직 설계 - 접근 권한 관련 테스트 추가